// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`has a secondary element LoginAnchor which renders correctly 1`] = `
.c0 {
  text-align: center;
  min-width: 8rem;
  border-radius: 5px;
  height: 1.75rem;
  color: white;
  margin-top: 0.1rem;
  margin-left: auto;
  margin-right: 1rem;
  padding-top: 0.8rem;
  font-weight: 600;
  text-transform: uppercase;
  font-size: 0.8rem;
}

.c1 {
  height: 1.2rem;
  width: 1.2rem;
  margin-bottom: -0.35rem;
  margin-right: 0.5rem;
}

<a
  className="c0"
>
  <svg
    className="c1"
    fill="none"
    height="1em"
    stroke="currentColor"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth="2"
    style={
      Object {
        "color": undefined,
      }
    }
    viewBox="0 0 24 24"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M15 3h4a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2h-4"
    />
    <polyline
      points="10 17 15 12 10 7"
    />
    <line
      x1="15"
      x2="3"
      y1="12"
      y2="12"
    />
  </svg>
  Login
</a>
`;

exports[`renders correctly 1`] = `
.c0 {
  height: 2.75rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 1rem;
  background-color: white;
}

.c1 {
  padding-top: 0.3rem;
  height: 2rem;
}

.c2 {
  text-align: center;
  min-width: 8rem;
  border-radius: 5px;
  height: 1.75rem;
  color: white;
  margin-top: 0.1rem;
  margin-left: auto;
  margin-right: 1rem;
  padding-top: 0.8rem;
  font-weight: 600;
  text-transform: uppercase;
  font-size: 0.8rem;
}

.c3 {
  height: 1.2rem;
  width: 1.2rem;
  margin-bottom: -0.35rem;
  margin-right: 0.5rem;
}

<nav
  className="c0"
>
  <img
    alt="logo"
    className="c1"
    src="logo.png"
  />
  <a
    className="c2"
  >
    <svg
      className="c3"
      fill="none"
      height="1em"
      stroke="currentColor"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15 3h4a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2h-4"
      />
      <polyline
        points="10 17 15 12 10 7"
      />
      <line
        x1="15"
        x2="3"
        y1="12"
        y2="12"
      />
    </svg>
    Login
  </a>
</nav>
`;
